# binexport

./: .gitignore  CMakeLists.txt  CompileOptions.cmake  ExternalGTest.cmake  ExternalOpenSSL.cmake  ExternalPostgreSQL.cmake  ExternalProtobuf.cmake  FindIdaSdk.cmake  LICENSE  README.md  address_references.cc  address_references.h  architectures.h  base_types.cc  base_types.h  basic_block.cc  basic_block.h  binexport.cc  binexport.h  binexport2.proto  binexport2_writer.cc  binexport2_writer.h  binexport_test.cc  call_graph.cc  call_graph.h  comment.cc  comment.h  dump_writer.cc  dump_writer.h  edge.cc  edge.h  entry_point.cc  entry_point.h  expression.cc  expression.h  filesystem_util.cc  flow_analysis.cc  flow_analysis.h  flow_graph.cc  flow_graph.h  (+21 more)
binaryninja/: log_sink.cc  log_sink.h  main_plugin.cc
boost_parts/: README.md  update-boost.sh
cmake/: BinExportDeps.cmake  BinExportOptions.cmake  CompileOptions.cmake  FindIdaSdk.cmake  Util.cmake
ida/: CMakeLists.txt  arm.cc  arm.h  begin_idasdk.inc  dalvik.cc  dalvik.h  digest.cc  digest.h  end_idasdk.inc  flow_analysis.cc  generic.cc  generic.h  ida-plugin.json  log_sink.cc  log_sink.h  main_plugin.cc  main_plugin.h  metapc.cc  metapc.h  mips.cc  mips.h  names.cc  names.h  plugin.h  ppc.cc  ppc.h  types_container.cc  ui.cc  ui.h  util.cc  util.h
java/: README.md  build.gradle  extension.properties
reader/: call_graph.cc  call_graph.h  call_graph_test.cc  flow_graph.cc  flow_graph.h  flow_graph_test.cc  graph_utility.h  graph_utility_test.cc  instruction.cc  instruction.h  instruction_test.cc
tools/: CMakeLists.txt  binexport2dump.cc  bxp_dummy.cc  bxp_main.cc  command_util.cc  command_util.h
util/: filesystem.cc  filesystem.h  filesystem_test.cc  format.cc  format.h  format_test.cc  hash.cc  hash.h  idb_export.cc  idb_export.h  idb_export_test.cc  logging.cc  logging.h  nested_iterator.h  process.cc  process.h  process_test.cc  range.h  status_macros.h  (+5 more)
(+33 files in other folders)
